gzip methods, disk space method

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Miscellaneous functions which I keep re-writing, public-domain/0bsd licensed.
-Placed here for personal reference.
+Drafting place. Miscellaneous functions which I keep re-writing,
+fairly generic, public-domain/0bsd licensed. Placed here for personal reference.
